# rustpj

./: .gitignore  Cargo.toml  readme.md
demo/demo_hello/: Cargo.toml
output/: sbom.json  vuln_report.json
src/: extract_zip.rs  get_lockfile.rs  get_sbom.rs  main.rs  scanner.rs  test.rs
test/sample_hello/: Cargo.toml
tmp/: Cargo.toml
