[package]
name = "rustpj"
version = "0.1.0"
edition = "2024"

[dependencies]
zip = "0.6"
walkdir = "2.3"
anyhow = "1.0"
tempfile = "3.2"
git2 = "0.18"
cargo-lock = "10.1"
rustsec = { version = "0.28", features = ["git"] }  # git feature 用于支持本地 git advisory DB
semver = "1.0"  # 版本范围匹配支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # JSON 报告输出
chrono = { version = "0.4", features = ["serde", "clock"] }
